--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+w<!DOCTYPE html>
 <html>
 <head>
 	<title>My Static Site</title>
@@ -8,7 +8,7 @@
 </head>
 <body>
 	<header>
-		<h1>My Static Website</h1>
+		<h1>My very awesome Static Website</h1>
 		<nav>
 			<ul>
 				<li><a href="#">Home</a></li>
