--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@ w<!DOCTYPE html>
 	
 	<main>
 		<h2>PRACTICE</h2>
-		<p>This is a simple static site built for practice.</p>
+		<p>This is a simple static site built for practice.lets see if it works</p>
 	</main>
 	
 	<footer>
