--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ w<!DOCTYPE html>
 </head>
 <body>
 	<header>
-		<h1>My awesome Static Website</h1>
+		<h1>My updated Static Website</h1>
 		<nav>
 			<ul>
 				<li><a href="#">Home</a></li>
