--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ w<!DOCTYPE html>
 </head>
 <body>
 	<header>
-		<h1>My updated Static Website!</h1>
+		<h1>My Static Website!</h1>
 		<nav>
 			<ul>
 				<li><a href="#">Home</a></li>
@@ -20,7 +20,7 @@ w<!DOCTYPE html>
 	
 	<main>
 		<h2>PRACTICE</h2>
-		<p>This is a simple static site built for practice.lets see if it works!</p>
+		<p>This is a simple static site built for practice</p>
 	</main>
 	
 	<footer>
